--- a/index.html
+++ b/index.html
@@ -19,29 +19,54 @@
     </ul>
 </div>
 <div class="container">
+    <div class="home">
+        <h3>
+            Home
+        </h3>
+        <p> This website for showing my Works </p>
+        <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hello"> </div>
+    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hi"> </div>
+    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" here"> </div>
+    </div>
 <div class="Works">
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quisquam consequuntur accusamus provident soluta! Accusamus in a temporibus alias! Nisi, ex. Blanditiis temporibus unde voluptatum aliquam quae esse deleniti corrupti.</p>
 
-    <h2> Photos </h2>
-    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hello"> </div>
-    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hi"> </div>
-    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" here"> </div>
+    <h2> About Me </h2>
+    <table>
+        <tr>
+            <th>persnola info  </th>
+            <th> objectives </th>
+            <th>  Experiance/ history   </th>
+    
+        </tr>
+        <tr>
+        <td> Eman Ibrahim </td> 
+        <td>  Apply for writers     </td> 
+        <td>   Experince 3+ years creative writing  </td> 
+      </tr>
+     <tr>
+         <td>    Age:22       </td>
+        <td>        Apply for frontEnd              </td> 
+        <td> <strong> programmer   </strong> </td> 
+      </tr>
+    </table>
     
 </div>
-<div class="experince">
-<table>
-    <tr>
-        <th>persnola info  </th>
-        <th> objectives </th>
-        <th>  Experiance/ history   </th>
+<div class="contact">
+<form action="my URL" method="post">
+    <h2> Contact us </h2>
+<label for=" contact"> Enter your Email </label>
+<input type="text"> 
+<button> Sumbit</button>
+<input type="text">
 
-    </tr>
-    <tr>
-    <td> Eman Ibrahim </td> <br>
-    <td>  Apply for writers     </td>
-    <td>   Experince 3+ years creative writing  </td>
-  </tr>
-</table>
+
+</form>
+
+
+</div>
+
+
 
 </div>
 
