--- a/index.html
+++ b/index.html
@@ -58,19 +58,25 @@
 <label for=" contact"> Enter your Email </label>
 <input type="text"> 
 <button> Sumbit</button>
+<label for="phone"> Enter your phone </label>  
 <input type="text">
-
-
+<button> Sumbit</button> 
 </form>
-
-
-</div>
-
-
+<article>
+<p> Thank you! I'will contanct with you ASAP</p>
+</article>
 
 </div>
 
 </div>
+
+</div>
+<div class="footer">
+    <p>&copy; 2020 EmanIbrahim.com<p>
+
+
+  </div>
+
 
 
 </body>
