--- a/index.html
+++ b/index.html
@@ -18,18 +18,29 @@
         <li> contact us </li>
     </ul>
 </div>
+<hr>
 <div class="container">
     <div class="home">
         <h3>
             Home
         </h3>
-        <p> This website for showing my Works </p>
-        <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hello"> </div>
-    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" hi"> </div>
-    <div class="img1"> <img src="https://via.placeholder.com/150" alt=" here"> </div>
-    </div>
-<div class="Works">
+        <p> <strong> This website for showing my Works  </strong>  </p>
+        <div class="Works">
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quisquam consequuntur accusamus provident soluta! Accusamus in a temporibus alias! Nisi, ex. Blanditiis temporibus unde voluptatum aliquam quae esse deleniti corrupti.</p>
+         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Asperiores ullam quam nesciunt libero odit fugit fugiat doloribus, enim iusto sed labore voluptas sapiente ipsam odio earum eius corporis eaque ex?</p>
+        
+         <div class="imgs">
+     <img src="https://via.placeholder.com/150" alt=" hello">
+     <img src="https://via.placeholder.com/150" alt=" hi"> 
+     <img src="https://via.placeholder.com/150" alt=" here">  
+    </div>
+</div>
+<div class="imgs1">
+    <img src="https://via.placeholder.com/150" alt=" hello">
+    <img src="https://via.placeholder.com/150" alt=" hi"> 
+    <img src="https://via.placeholder.com/150" alt=" here">  
+   </div>
+</div>
 
     <h2> About Me </h2>
     <table>
@@ -57,7 +68,7 @@
     <h2> Contact us </h2>
 <label for=" contact"> Enter your Email </label>
 <input type="text"> 
-<button> Sumbit</button>
+<button> Sumbit</button><br> <br>
 <label for="phone"> Enter your phone </label>  
 <input type="text">
 <button> Sumbit</button> 
