--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <hr>
 <div class="container">
     <div class="home">
-        <h3>
+        <h2>
             Home
-        </h3>
+        </h2>
         <p> <strong> This website for showing my Works  </strong>  </p>
         <div class="Works">
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quisquam consequuntur accusamus provident soluta! Accusamus in a temporibus alias! Nisi, ex. Blanditiis temporibus unde voluptatum aliquam quae esse deleniti corrupti.</p>
@@ -41,8 +41,10 @@
     <img src="https://via.placeholder.com/150" alt=" here">  
    </div>
 </div>
-
+<hr> 
+<article>   
     <h2> About Me </h2>
+    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi asperiores optio dolore explicabo adipisci facilis repellat dolorem iure, placeat voluptate pariatur ab rem ex consequatur dolorum! Doloribus quibusdam enim quo? </p>
     <table>
         <tr>
             <th>persnola info  </th>
@@ -57,12 +59,14 @@
       </tr>
      <tr>
          <td>    Age:22       </td>
-        <td>        Apply for frontEnd              </td> 
-        <td> <strong> programmer   </strong> </td> 
+        <td>        Apply for frontEnds     </td> 
+        <td>  Programmer   </strong> </td> 
       </tr>
     </table>
-    
+</article>
 </div>
+    
+<hr>
 <div class="contact">
 <form action="my URL" method="post">
     <h2> Contact us </h2>
@@ -80,7 +84,7 @@
 </div>
 
 </div>
-
+<hr> 
 </div>
 <div class="footer">
     <p>&copy; 2020 EmanIbrahim.com<p>
