--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </table>
 </article>
 </div>
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione consequatur, commodi, ut animi vitae excepturi vel iste ex repellat incidunt molestias fugit. Repellendus repudiandae vero adipisci, accusantium mollitia labore earum.</p>
     
 <hr>
 <div class="contact">
